salesforce/force-app/main/default/objects/Journey_Approval__c/Journey_Approval__c.object-meta.xml
<CustomObject>
    <description>Queue of AI-generated personalized journey content pending marketer approval. Created nightly from Meaningful Events, reviewed via dashboard before sending.</description>
    <label>Journey Approval</label>
    <nameField>
        <displayFormat>JA-{0000}</displayFormat>
        <label>Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journey Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>