salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Approval_Tier__c.field-meta.xml
<CustomField>
    <fullName>Approval_Tier__c</fullName>
    <description>Approval tier based on confidence, customer value, and risk</description>
    <label>Approval Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Send</fullName>
                <description>High confidence, standard event - sends automatically with notification</description>
            </value>
            <value>
                <fullName>Soft Review</fullName>
                <description>Medium confidence - auto-sends in 4 hours unless marketer intervenes</description>
            </value>
            <value>
                <fullName>Review Required</fullName>
                <default>true</default>
                <label>Review Required</label>
                <description>Low confidence or high-value customer - marketer must approve</description>
            </value>
            <value>
                <fullName>Escalate</fullName>
                <description>Very high value or sensitive content - requires manager approval</description>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>