salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Approved_Body__c.field-meta.xml
<CustomField>
    <fullName>Approved_Body__c</fullName>
    <description>Marketer-edited/approved email body content</description>
    <label>Approved Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>