salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Approved_Subject__c.field-meta.xml
<CustomField>
    <fullName>Approved_Subject__c</fullName>
    <description>Marketer-edited/approved email subject line</description>
    <label>Approved Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>