salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Assigned_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The marketer portfolio this opportunity is assigned to</description>
    <label>Assigned Portfolio</label>
    <referenceTo>Marketer_Portfolio__c</referenceTo>
    <relationshipLabel>Journey Approvals</relationshipLabel>
    <relationshipName>Journey_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>