salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Auto_Send_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Auto_Send_Deadline__c</fullName>
    <description>For Soft Review tier: datetime when this will auto-send if not reviewed</description>
    <label>Auto-Send Deadline</label>
    <type>DateTime</type>
</CustomField>