salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <defaultValue>50</defaultValue>
    <description>AI confidence score for this opportunity (0-100). Higher scores indicate more reliable content generation.</description>
    <label>Confidence Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>