salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The recipient of the personalized journey</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Journey Approvals</relationshipLabel>
    <relationshipName>Journey_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>