salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Customer_Value_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Value_Score__c</fullName>
    <description>Calculated customer value score for prioritization (0-100)</description>
    <label>Customer Value Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>