salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <description>Reason provided when declining a journey</description>
    <label>Decline Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>