salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Email_Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Content_Version_Id__c</fullName>
    <description>Salesforce ContentVersion ID for email content saved to MC Content Workspace</description>
    <label>Email Content Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>