salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>When the meaningful event occurs (e.g., wedding date, birthday)</description>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>