salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Event_Summary__c.field-meta.xml
<CustomField>
    <fullName>Event_Summary__c</fullName>
    <description>Sanitized context for marketer review. Does NOT include raw transcript or PII.</description>
    <label>Event Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>