salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of meaningful event (life-event, preference, etc.)</description>
    <label>Event Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>