salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Firefly_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Firefly_Prompt__c</fullName>
    <description>The prompt used to generate the Firefly image</description>
    <label>Firefly Prompt</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>