salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Generated_Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Generated_Video_URL__c</fullName>
    <description>URL of the Firefly-generated personalized video (Salesforce file URL or presigned URL)</description>
    <label>Generated Video URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>