salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Image_Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Image_Content_Version_Id__c</fullName>
    <description>Salesforce ContentVersion ID if image was uploaded to Files</description>
    <label>Image Content Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>