salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Journey_Guardrails__c.field-meta.xml
<CustomField>
    <fullName>Journey_Guardrails__c</fullName>
    <description>JSON object storing journey guardrails: maxEmailsPerWeek, maxSmsPerWeek, exitOnPurchase, etc.</description>
    <label>Journey Guardrails</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>