salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Journey_Id__c.field-meta.xml
<CustomField>
    <fullName>Journey_Id__c</fullName>
    <description>Groups related steps into a single multi-step journey</description>
    <externalId>true</externalId>
    <label>Journey ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>