salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Marketer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Marketer_Notes__c</fullName>
    <description>Notes added by the marketer during review - becomes context for future AI generations</description>
    <label>Marketer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>