salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Marketing_Flow__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Marketing Flow created from this journey approval</description>
    <label>Marketing Flow</label>
    <referenceTo>Marketing_Flow__c</referenceTo>
    <relationshipLabel>Journey Approvals</relationshipLabel>
    <relationshipName>Journey_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>