salesforce/force-app/main/default/objects/Journey_Approval__c/fields/MC_Journey_Key__c.field-meta.xml
<CustomField>
    <fullName>MC_Journey_Key__c</fullName>
    <description>Marketing Cloud journey definition key after send</description>
    <label>MC Journey Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>