salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Meaningful_Event__c.field-meta.xml
<CustomField>
    <fullName>Meaningful_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The meaningful event that triggered this journey approval</description>
    <label>Meaningful Event</label>
    <referenceTo>Meaningful_Event__c</referenceTo>
    <relationshipLabel>Journey Approvals</relationshipLabel>
    <relationshipName>Journey_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>