salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Media_Ad_Format__c.field-meta.xml
<CustomField>
    <fullName>Media_Ad_Format__c</fullName>
    <description>Ad format/placement within the selected media platform</description>
    <label>Media Ad Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Roll Video</fullName>
            </value>
            <value>
                <fullName>Story Ad</fullName>
            </value>
            <value>
                <fullName>Feed Ad</fullName>
            </value>
            <value>
                <fullName>Sponsored Post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>