salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Media_Audience_Signals__c.field-meta.xml
<CustomField>
    <fullName>Media_Audience_Signals__c</fullName>
    <description>JSON payload of audience targeting signals for Merkury identity resolution</description>
    <label>Media Audience Signals</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>