salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Media_Creative_Brief__c.field-meta.xml
<CustomField>
    <fullName>Media_Creative_Brief__c</fullName>
    <description>AI-generated creative brief for the paid media ad</description>
    <label>Media Creative Brief</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>