salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Media_Estimated_Reach__c.field-meta.xml
<CustomField>
    <fullName>Media_Estimated_Reach__c</fullName>
    <description>Estimated audience reach for the media activation</description>
    <label>Media Estimated Reach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>