salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Media_Platform__c.field-meta.xml
<CustomField>
    <fullName>Media_Platform__c</fullName>
    <description>Paid media platform for Merkury activation (CTV or Social)</description>
    <label>Media Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTV</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>