salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Merkury_Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>Merkury_Activation_Status__c</fullName>
    <description>Status of the Merkury paid media activation</description>
    <label>Merkury Activation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staged</fullName>
                <default>true</default>
                <label>Staged</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>