salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Priority_Score__c</fullName>
    <description>Combined priority score for inbox ordering (urgency × value × confidence)</description>
    <label>Priority Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>