salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Recommended_Products__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Products__c</fullName>
    <description>JSON array of recommended products with name, id, and imageUrl for prompt enrichment</description>
    <label>Recommended Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>