salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Reviewed_At__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_At__c</fullName>
    <description>When the approval/decline decision was made</description>
    <label>Reviewed At</label>
    <type>DateTime</type>
</CustomField>