salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The marketer who approved or declined this journey</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Journey_Approvals_Reviewed</relationshipName>
    <type>Lookup</type>
</CustomField>