salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Scheduled_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Send_Date__c</fullName>
    <description>The calculated date when this journey step should be sent</description>
    <label>Scheduled Send Date</label>
    <type>DateTime</type>
</CustomField>