salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Send_Delay_Days__c.field-meta.xml
<CustomField>
    <fullName>Send_Delay_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Days after journey start (or previous step) to send this step. 0 = send immediately.</description>
    <label>Send Delay (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>