salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Sent_At__c</fullName>
    <description>When the journey was sent to Marketing Cloud</description>
    <label>Sent At</label>
    <type>DateTime</type>
</CustomField>