salesforce/force-app/main/default/objects/Journey_Approval__c/fields/SMS_Body__c.field-meta.xml
<CustomField>
    <fullName>SMS_Body__c</fullName>
    <description>SMS message content (max 160 characters for single SMS)</description>
    <label>SMS Body</label>
    <length>320</length>
    <type>LongTextArea</type>
</CustomField>