salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Step_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Which step in the multi-step journey sequence (1, 2, 3, etc.)</description>
    <label>Step Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>