salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Suggested_Body__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Body__c</fullName>
    <description>AI-generated email body content</description>
    <label>Suggested Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>