salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Suggested_Subject__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Subject__c</fullName>
    <description>AI-generated email subject line</description>
    <label>Suggested Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>