salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Total_Steps__c.field-meta.xml
<CustomField>
    <fullName>Total_Steps__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Total number of steps in this multi-step journey</description>
    <label>Total Steps</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>