salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <description>Urgency level based on event date proximity</description>
    <label>Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
                <label>Immediate (≤3 days)</label>
            </value>
            <value>
                <fullName>This Week</fullName>
                <label>This Week (4-7 days)</label>
            </value>
            <value>
                <fullName>This Month</fullName>
                <label>This Month (8-30 days)</label>
            </value>
            <value>
                <fullName>Future</fullName>
                <label>Future (30+ days)</label>
            </value>
            <value>
                <fullName>No Date</fullName>
                <default>true</default>
                <label>No Date Specified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>