salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Video_Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Video_Content_Version_Id__c</fullName>
    <description>Salesforce ContentVersion ID for the stored Firefly video</description>
    <label>Video Content Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>