salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Video_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Video_Prompt__c</fullName>
    <description>Structured video prompt generated by the Skincare Concern Video Brief template</description>
    <label>Video Prompt</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>