salesforce/force-app/main/default/objects/Journey_Approval__c/fields/Was_Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>Was_Auto_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this opportunity was auto-approved based on confidence score</description>
    <label>Auto-Approved</label>
    <type>Checkbox</type>
</CustomField>